Refactoring packages: database, jni, worker, client, server move to one level deeper for logical grouping